--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,85 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    
+    <h2>TomorrowLand</h2>
+    <ul>
+        <li>
+            <h3>Positief</h3>
+            <ul>
+                <li>Het Grid dat gebruikt wordis duidelijk en clean</li>
+                <li>Home page is goed opgemaakt met mogelijkheid om in te loggen en een subscribe optie voor de nieuwsbrief in de footer</li>
+                <li>Het button hover effect met de gradients passen zeer goed</li>
+                <li>Social media iconen zijn aanwezig</li>
+                <li>Subpagina's zoals festival hebben extra menu's op de pagina zelf om door de submap te lopen</li>
+                <li>Fancybox op de festival subpagina om de foto's van de afgelopen festivals weer te geven</li>
+                <li>De lazyload is een goede toevoeging aan de site</li>
+                <li>Bij de practical pagina staat alles tot in detail uitgelegd</li>
+                <li>FAQ zeer uitgebreid</li>    
+                <li>Uitgereide uitschrijving van de consumptie mogelijkheden</li>
+                <li>De 365 pagina waarbij dat redelijk wat optredens worden weergegeven heeft een uitnodigende/clean look</li>
+                <li>De store is zeer goed opgemaakt</li>
+            </ul>
+        </li>
+        <li>
+            <h3>Negatief</h3>
+            <ul>
+                <li>Als je op google tomorrowland zoekt kom je op de subpagina festival onder het menuonderdeel belgium i.p.v de hoofdpagina</li>
+                <li>Bij het kleinstmogelijke formaat in het browservenster is de footer niet 100% meer responsive (op de homepagina)</li>
+                <li>Als je een tweede social media icoon openklikt sluit het eerste niet en overlappen ze elkaar</li>
+                <li>Beetje langdradig om tickets te kopen (wel omdat er zeer veel keuze is)</li>
+                <li>De opmaak va nde line-up is wat onoverzichtelijk op uitlijning</li>
+                <li>Als je een nieuw item wilt toevoegen aan de winkelkart werkt dit tenzij je twee keer hetzelfde item wilt toevoegen zonder het aantal aan te passen van 1 naar 2 en je 2 keer op aad to cart klikt word de winkelkar eerst gesloten en dan pas terug geopend om dit item toe te voegen </li>
+                <li>Als de winkelcart word geopend springt de site naar links en verlies je deel van de nav en site </li>
+            </ul>
+        </li>
+    </ul>
+    <h2>Rock Werchter</h2>
+    <ul>
+        <li>
+            <h3>Positief</h3>
+            <ul>
+                <li>De opmaak is in orde</li>
+                <li>Nieuwsbrief mogelijkheid</li>
+                <li>Tickets kopen is een gemakkelijk proces</li>
+                <li>Font in de bewegende banner is een goed/sterk font</li>
+                <li>zoekfunctie is uitgebreid</li>
+                <li>Alles staat duidelijk uitgelegd </li>
+                <li>Mogelijkheid om de site in het Nederlands, Frans en Engels te zetten</li>
+            </ul>
+        </li>
+        <li>
+             <h3>Negatief</h3>
+            <ul>
+              <li>De kleuren zijn eerder als een kleurboek </li>
+              <li>De bewegende banner is is wat storend </li>
+              <li>De responsive nav is kwa kleur en ompaak niet 100%</li>
+              <li>Door het aantal foto's bij de line-up pagina laad deze traag</li>
+              <li>De social media iconen openen geen nieuw tabblad maar blijft op dezelfde pagina</li>
+              <li>De kleuren keuze van de pagina doet pijn aan de ogen</li>
+
+            </ul>
+         </li>
+    </ul>
+    <h2>Laundry Day</h2>
+    <ul>
+        <li>
+            <h3>Positief</h3>
+            <ul>
+                <li>Je krijgt direct een vibe van het festival door de aftermovie van het jaar ervoor</li>
+                <li>Je kan een nieuwsbrief ontvangen en ze volgen op facebook</li>
+                <li> social media icons werken</li>
+                <li> mogelijkheid om terug te keren in de stappen bij de betaling </li>
+            </ul>
+        </li>
+        <li>
+            <h3>Negatief</h3>
+            
+        <ul>
+                <li>Er is een bug waardoor je naar beneden kunt blijven scrollen en alles gewoon zwart is </li>
+                <li>Alle info is op facebook te vinden de site is puur voor tickets te kopen ( op de datum en plaats na ) </li>
+                <li>Als je uw ticket hebt besteld kom je naar de betaal pagina maar als je dan terug wilt gaan om bv nog 1 ticket aan te kopen word je terug naar de home gestuurd i.p.V naar uw bestelling</li>
+        </ul>
+        </li>
+    </ul>
 </body>
 </html>
