1 negatief item toegevoegd aan tomorrowland

--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -32,6 +32,7 @@
         <li>
             <h3>Negatief</h3>
             <ul>
+                <li>Geen searchbar gevonden</li>
                 <li>Als je op google tomorrowland zoekt kom je op de subpagina festival onder het menuonderdeel belgium i.p.v de hoofdpagina</li>
                 <li>Bij het kleinstmogelijke formaat in het browservenster is de footer niet 100% meer responsive (op de homepagina)</li>
                 <li>Als je een tweede social media icoon openklikt sluit het eerste niet en overlappen ze elkaar</li>
