--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -40,6 +40,7 @@
                 <li>De opmaak va nde line-up is wat onoverzichtelijk op uitlijning</li>
                 <li>Als je een nieuw item wilt toevoegen aan de winkelkart werkt dit tenzij je twee keer hetzelfde item wilt toevoegen zonder het aantal aan te passen van 1 naar 2 en je 2 keer op aad to cart klikt word de winkelkar eerst gesloten en dan pas terug geopend om dit item toe te voegen </li>
                 <li>Als de winkelcart word geopend springt de site naar links en verlies je deel van de nav en site </li>
+                <li>Het contact formulier bevind zich onder de FAQ en niet direct in het zicht van de mensen dus om het contact formulier te vinden is het zoeken</li>
             </ul>
         </li>
     </ul>
