--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
+        <div class="title">
     <h1>Concurrentie analyse</h1>
+    </div>
+    <div class="content">
+
     <h2>TomorrowLand</h2>
     <ul>
         <li>
@@ -44,6 +48,9 @@
             </ul>
         </li>
     </ul>
+    </div>
+    <div class="content">
+
     <h2>Rock Werchter</h2>
     <ul>
         <li>
@@ -71,6 +78,9 @@
             </ul>
          </li>
     </ul>
+    </div>
+    <div class="content">
+
     <h2>Laundry Day</h2>
     <ul>
         <li>
@@ -92,5 +102,6 @@
         </ul>
         </li>
     </ul>
+    </div>
 </body>
 </html>
