--- a/pages/intro.html
+++ b/pages/intro.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
+    <div class="title">
     <h1>New Media Design I</h1>
+    </div>
+    <div class="content">
     <h2>Punch Line</h2>
 
     <dl class="info">
@@ -23,8 +26,9 @@
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=99943">Mijn opdracht</a>
     </p>
-    
+   
     <h1>Introductie</h1>
     <p>Mijn concept van een festival site zou een overzichtelijke site zijn met een aangename UX om dit een aangename UX te maken zou er een easy click to order systeem zijn waarbij met 2 kliks besteld kan worden. Een mooi opgemaakt contact formulier is ook een must, een navigatie met de MMenu plugin (dit is super overzichtelijk). Aangezien dat mijn kleur die ik heb gekozen blauw is ga ik in mijn foto’s blauwe accenten hetzelfde op mijn knoppen. De leeftijdgroep ligt tussen 14-18 dus het festival zal een muziek festival worden met hedendaagse muziek van het rap en hip-hop genre. De site zal ook een bestel formulier moeten hebben die via het click to order systeem benaderd kan worden. Een tijdslijn met verschillende artiesten op welk podium is ook een must dit kan helpen de mensen hun festival gang te plannen. een pagina met praktische informatie zoals de locatie en datum van het festival, de openingsuren, regels, wat heb je nodig om binnen te mogen, hoe kan je tot daar geraken, richtlijnen voor mensen met een beperking , en een pagina met partners/sponsors. Een subscribe functie voor de nieuwsbrief, social media links, een eigen privacy policy. FAQ is ook nog een pagina die eventueel van pas zou komen, een merchandise pagina, de optie om van taal te switchen. aanwezige consumptie mogelijkheden.  Een mogelijkheid om in te loggen. Camping informatie, tickets verkoop en prijs plus de ticket voorverkoop en de voorverkoop prijs en dan ten laatste nog een forum waar mensen hun meningen/overtuigingen over het festival en/of de muziek ervan kunnen delen.</p>
+    </div>
 </body>
 </html>
