--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -9,14 +9,28 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
+        <div class="title">
     <h1>Scenario's</h1>
+    </div>
+    <div class="content">
+
     <h2>1</h2>
     <p>Bram is 15 en hij is nieuw in het rap/hip-hop genre en hij gebruikt de site om informatie te verzamelen over het muziek genre en<br> wilt in contact komen met andere mensen die wel wat over dit onderwerp weten</p>
+    </div>
+    <div class="content">
+
     <h2>2</h2>
     <p>Max is een 18jarige scholier en is al jaren gepassioneerd door beide muziek genre's en wilt graag zijn passie en mening over bepaalde onderwerpen delen met de community</p>
+    </div>
+    <div class="content">
+
     <h2>3</h2>
     <p>Wendy is een 40 jarige moeder die samen met haar 14 jarige zoon tickets wil bestellen wendy is vroedvrouw en spendeerd minder<br> tijd met computers dan op andere jobs maar wendy moet soepel door de site lopen en gemakkelijk tickets kunnen bestellen</p>
+    </div>
+    <div class="content">
+
     <h2>4</h2>
     <p>sven is 17 en wil graag een line-up naar zijn keuze plannen zonder al te veel problemen wil hij de stage, tijdstip en naam van de artiesten kunnen zien</p>
+    </div>
 </body>
 </html>
