--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
+        <div class="title">
     <h1>Digital Styleguide</h1>
+    </div>
+    <diV class="content">
+
+    </diV>
+
+    <diV class="content">
+
+    </diV>
+
+    <diV class="content">
+
+    </diV>
 </body>
 </html>
