--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -13,13 +13,31 @@
     <h1>Digital Styleguide</h1>
     </div>
     <diV class="content">
-
+        <h1 id="h1">Voorbeeld van een H1 titel</h1>
+        <p class="bijschrift">Futura PT Cond / 2.5em corpsgrote / 1.5em line height</p>
+        <h2 id="h2">Voorbeeld van een H2 header</h2>
+        <p class="bijschrift">Source Sans Pro / 1.5em corpsgrote / 1.5em line height</p>
+        <p id="p">Voorbeeld Doorlopende tekst</p>
+        <p class="bijschrift">Source Sans Pro Light / 14px corpsgrote / 1.5em line height</p>
     </diV>
 
     <diV class="content">
-
+        <h1 id="h1">Foto transition effect</h1>
+        <div id="foto">
+        </div>
     </diV>
 
+    <diV class="content">
+        <h1 id="h1">Button transition effect</h1>
+        <button id="button">Hover me</button>
+    </diV>
+    <diV class="content">
+        <h1 id="h1">Color scheme</h1>
+        <div class="colorBox" id="colorOne"> <p>#3e92b3</p></div>
+        <div class="colorBox" id="colorTwo"><p>#3f6a75</p></div>
+        <div class="colorBox" id="colorThree"><p>#408396</p></div>
+        <div class="colorBox" id="colorFour"><p>#4470b6</p></div>
+    </diV>
     <diV class="content">
 
     </diV>
